--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
 
  <!-- Main Grid Container -->
    <!-- Main Grid Container -->
-    <div class="grid grid-cols-4 gap-6 p-6 max-w-7xl mx-auto">
-        <!-- 3x3 Grid for First Three Columns -->
-        <div class="col-span-3 grid grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-6 p-6 max-w-7xl mx-auto">
+    <!-- 3x3 Grid for First Three Columns -->
+    <div class="col-span-1 md:col-span-3 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+
             <!-- National Emergency Number -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+                <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/emergency.png" alt="Emergency Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-semibold text-gray-800">National Emergency Number</h3>
@@ -69,13 +70,13 @@
                 <button class="btn btn-xs">All</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Police Helpline Number -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+                <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/police.png" alt="Police Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-semibold text-gray-800">Police Helpline Number</h3>
@@ -85,13 +86,13 @@
                <button class="btn btn-xs">Police</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Fire Service Number -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+                <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/fire-service.png" alt="Fire Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-semibold text-gray-800">Fire Service Number</h3>
@@ -101,13 +102,13 @@
                 <button class="btn btn-xs">Fire</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Ambulance Service -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+               <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/ambulance.png" alt="Ambulance Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-bold text-gray-800">Ambulance Service</h3>
@@ -117,13 +118,13 @@
                 <button class="btn btn-xs">Health</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Women & Child Helpline -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+                <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/emergency.png" alt="Women & Child Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-bold text-gray-800">Women & Child Helpline</h3>
@@ -133,13 +134,13 @@
                 <button class="btn btn-xs">help</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class="btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Anti-Corruption Helpline -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+               <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/emergency.png" alt="Anti-Corruption Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-bold text-gray-800">Anti-Corruption Helpline</h3>
@@ -149,13 +150,13 @@
                 <button class="btn btn-xs">Govt.</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Electricity Helpline -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+               <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/emergency.png" alt="Electricity Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-bold text-gray-800">Electricity Helpline</h3>
@@ -165,13 +166,13 @@
                <button class="btn btn-xs">Electricity</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Brac Helpline -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+                <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/emergency.png" alt="Brac Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-bold text-gray-800">Brac Helpline</h3>
@@ -181,13 +182,13 @@
                <button class="btn btn-xs">NGO</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
 
             <!-- Bangladesh Railway Helpline -->
             <div class="relative bg-white rounded-lg p-4 shadow-md flex flex-col items-start justify-between w-full h-64">
-                <div class="absolute top-2 right-2 text-gray-400">♥</div>
+                <div class="absolute top-2 right-2 "><button class="btn-heart  text-pink-600">💗</button></div>
                 <img src="./assets/emergency.png" alt="Railway Icon" class="w-10 h-10 mb-2">
                 <div class="text-left">
                     <h3 class="text-lg font-bold text-gray-800">Bangladesh Railway Helpline</h3>
@@ -197,25 +198,28 @@
                <button class="btn btn-xs">Travel</button>
                 <div class="flex justify-between w-full">
                     <button class="bg-gray-200 text-gray-700 px-3 py-1 rounded hover:bg-gray-300 w-1/2 mr-1">Copy</button>
-                    <button class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
+                    <button class=" btn-call bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600 w-1/2 ml-1">Call</button>
                 </div>
             </div>
         </div>
 
         <!-- Call History (4th Column) -->
         <div class="col-span-1 bg-white rounded-lg p-4 shadow-md flex flex-col justify-between h-full">
-            <div>
-                <div class="Flex flex flex-row justify-between"> 
-                <h3 class="text-lg font-bold text-gray-700">Call History</h3>
-                <button class="btn btn-success">Call</button>
+            <div class="bg-white rounded-xl p-4 flex flex-col order-2 md:col-span-1 md:row-span-3" id="call-history">
+                    <div class="flex justify-between items-center">
+                        <h2 class=" mb-2"><i class="fa-solid fa-clock-rotate-left"></i>Call History</h2>
+                        <button id="btn-clear" class="btn btn-success text-white  h-8 rounded-2xl">Clear</button>
+                    </div>
+                    <div class="m-3 border-2 border-gray-200 rounded-xl history-list">
+                        <p id="no-calls" class="text-center text-gray-400">No calls yet. Your calls will appear here.</p>
+                    </div>
+                    
                 </div>
-                <ul class="mt-2 space-y-2">
-                    <li class="text-sm text-gray-500">National Emergency Number - 999 (12:52 PM)</li>
-                    <li class="text-sm text-gray-500">Fire Service Number - 999 (12:52 PM)</li>
-                    <li class="text-sm text-gray-500">Ambulance Service - 1994-999999 (12:52 PM)</li>
-                    <li class="text-sm text-gray-500">Anti-Corruption Helpline - 106 (12:52 PM)</li>
-                </ul>
+
             </div>
+        </div>
            
         </div>
     </div>
+    <script src="script.js"></script>
+</main>
